--- a/note-2024.md
+++ b/note-2024.md
@@ -1,5 +1,9 @@
 # 一些有用的网页
 
+## 机器学习势大模型
+
+ -[CHGNet包括磁性](https://chgnet.lbl.gov/#tutorials-and-docs)
+
 ## @实用工具
 
 - [GPT4-CUHK](https://elearning.itsc.cuhk.edu.hk/ChatGPTDemo/Default.aspx)
