--- a/note-2024.md
+++ b/note-2024.md
@@ -6,6 +6,10 @@
 
 ## @实用工具
 
+- [Silicon properties](https://refractiveindex.info/?shelf=main&book=Si&page=Aspnes)
+
+- [lammps potential](https://lammpstube.com/mdpotentials/)
+
 - [GPT4-CUHK](https://elearning.itsc.cuhk.edu.hk/ChatGPTDemo/Default.aspx)
 
 - [多端传输文件网页版工具-wormhole](https://wormhole.app/)
