--- a/note-2024.md
+++ b/note-2024.md
@@ -4,6 +4,8 @@
 
  - [CHGNet包括磁性](https://chgnet.lbl.gov/#tutorials-and-docs)
 
+ - [GAPs](https://www.libatoms.org/Home/DataRepository/)
+
 ## @实用工具
 
 - [Silicon properties](https://refractiveindex.info/?shelf=main&book=Si&page=Aspnes)
