--- a/note-2024.md
+++ b/note-2024.md
@@ -6,6 +6,8 @@
 
  - [GAPs](https://www.libatoms.org/Home/DataRepository/)
 
+ - [aissquare](https://www.aissquare.com/datasets?page=1&type=datasets&sort=download_count)
+
 ## @实用工具
 
 - [Silicon properties](https://refractiveindex.info/?shelf=main&book=Si&page=Aspnes)
