--- a/note-2024.md
+++ b/note-2024.md
@@ -35,6 +35,8 @@
 - [mathtype](https://demo.wiris.com/mathtype/en/developers.php)
 
 - [在线图扣点](https://apps.automeris.io/wpd4/)
+ 
+- [清华大学开源软件镜像站](https://mirrors.tuna.tsinghua.edu.cn/help/anaconda/)
 
 ## @分子动力学相关
 
