--- a/note-2024.md
+++ b/note-2024.md
@@ -1,5 +1,9 @@
 # 一些有用的网页
 
+## Ladder
+
+- [MD software](https://atomistic.software/#/)
+
 ## 机器学习势大模型
 
  - [CHGNet包括磁性](https://chgnet.lbl.gov/#tutorials-and-docs)
@@ -7,6 +11,14 @@
  - [GAPs](https://www.libatoms.org/Home/DataRepository/)
 
  - [aissquare](https://www.aissquare.com/datasets?page=1&type=datasets&sort=download_count)
+
+ - [XACS for molecular quantum mechanical computations](https://xacs.xmu.edu.cn/)
+
+ - [SCM MLP](https://www.scm.com/amsterdam-modeling-suite/machine-learning-potentials/)
+
+## MLP of H2O
+
+- [ICE group](https://www.ch.cam.ac.uk/group/michaelides/research/machine-learning-potentials)
 
 ## @实用工具
 
