--- a/note-2024.md
+++ b/note-2024.md
@@ -6,6 +6,8 @@
 
 ## 机器学习势大模型
 
+ - [ORB models](https://github.com/orbital-materials/orb-models?tab=readme-ov-file)
+
  - [CHGNet包括磁性](https://chgnet.lbl.gov/#tutorials-and-docs)
 
  - [GAPs](https://www.libatoms.org/Home/DataRepository/)
