--- a/note-2024.md
+++ b/note-2024.md
@@ -8,7 +8,7 @@
 
  - [ORB models](https://github.com/orbital-materials/orb-models?tab=readme-ov-file)
 
- - [CHGNet包括磁性](https://chgnet.lbl.gov/#tutorials-and-docs)
+ - [Matbench discovery](https://matbench-discovery.materialsproject.org/)
 
  - [GAPs](https://www.libatoms.org/Home/DataRepository/)
 
