--- a/note-2024.md
+++ b/note-2024.md
@@ -120,6 +120,8 @@ MatCalc 是一个科学软件工具箱，用于计算机模拟，例如：
 
 ## @安装软件
 
+- [CUDA-Driver](https://docs.nvidia.com/cuda/cuda-toolkit-release-notes/index.html)
+
 - [GPU Compute Capability](https://developer.nvidia.com/cuda-gpus)
 
 ## @数据库
