--- a/note-2024.md
+++ b/note-2024.md
@@ -24,6 +24,12 @@
 
 ## @实用工具
 
+- [unitconverters](https://www.unitconverters.net/)
+
+- [unit-converter](https://www.translatorscafe.com/unit-converter)
+
+- [convertunits](https://www.convertunits.com/)
+
 - [Silicon properties](https://refractiveindex.info/?shelf=main&book=Si&page=Aspnes)
 
 - [lammps potential](https://lammpstube.com/mdpotentials/)
