--- a/note-2024.md
+++ b/note-2024.md
@@ -26,6 +26,8 @@
 
 - [unitconverters](https://www.unitconverters.net/)    [unit-converter](https://www.translatorscafe.com/unit-converter)    [convertunits](https://www.convertunits.com/)
 
+- [physics formul](https://goldbook.iupac.org/)
+
 - [Silicon properties](https://refractiveindex.info/?shelf=main&book=Si&page=Aspnes)
 
 - [lammps potential](https://lammpstube.com/mdpotentials/)
