--- a/note-2024.md
+++ b/note-2024.md
@@ -6,6 +6,8 @@
 
 ## 机器学习势大模型
 
+ - [GRACE](https://github.com/ICAMS/grace-tensorpotential)
+
  - [ORB models](https://github.com/orbital-materials/orb-models?tab=readme-ov-file)
 
  - [Matbench discovery](https://matbench-discovery.materialsproject.org/)
