--- a/note-2024.md
+++ b/note-2024.md
@@ -1,5 +1,9 @@
 # 一些有用的网页
 
+## MarkDown for WeSubscript
+
+- [MDnice](https://editor.mdnice.com/)
+
 ## Ladder
 
 - [MD software](https://atomistic.software/#/)
