--- a/note-2024.md
+++ b/note-2024.md
@@ -4,6 +4,18 @@
 
 - [MDnice](https://editor.mdnice.com/)
 
+## 数据对比
+
+ - [Matbench discovery](https://matbench-discovery.materialsproject.org/)
+
+ - [Trends in atomistic simulation engines](https://atomistic.software)
+
+ - [CHAT大模型](https://artificialanalysis.ai)
+
+ - [OpenRouter](https://openrouter.ai/)
+
+ - [GPU天梯](https://www.techpowerup.com/gpu-specs/)
+
 ## Ladder
 
 - [MD software](https://atomistic.software/#/)
@@ -13,8 +25,6 @@
  - [GRACE](https://github.com/ICAMS/grace-tensorpotential)
 
  - [ORB models](https://github.com/orbital-materials/orb-models?tab=readme-ov-file)
-
- - [Matbench discovery](https://matbench-discovery.materialsproject.org/)
 
  - [GAPs](https://www.libatoms.org/Home/DataRepository/)
 
