--- a/note-2024.md
+++ b/note-2024.md
@@ -40,6 +40,8 @@
 
 ## @实用工具
 
+- [Mermaid](https://mermaid-live.nodejs.cn/edit)
+
 - [unitconverters](https://www.unitconverters.net/)    [unit-converter](https://www.translatorscafe.com/unit-converter)    [convertunits](https://www.convertunits.com/)
 
 - [physics formul](https://goldbook.iupac.org/)
@@ -74,13 +76,9 @@
 
 ## @分子动力学相关
 
-- [量子力学学习笔记](https://github.com/lhycms/QM/tree/main)
+- [量子力学学习笔记](https://github.com/lhycms/QM/tree/main): 包括了一些分子动力学的内容，以及R.I.N.G.程序的输入示例。
 
-重点包括了一些分子动力学的内容，以及R.I.N.G.程序的输入示例。
-
-- [rebo-lj-lammps](https://sites.psu.edu/sinnott/software/)
-
-封闭的MoS2势使用与反应性经验键序 (REBO) 中使用的类似形式。
+- [rebo-lj-lammps](https://sites.psu.edu/sinnott/software/): 封闭的MoS2势使用与反应性经验键序 (REBO) 中使用的类似形式。
   
 - [GenIce](https://github.com/vitroid/GenIce)
 
@@ -92,17 +90,11 @@
 
 - [Defects in Crystals](https://www.tf.uni-kiel.de/matwis/amat/def_en/index.html)
 
-MatCalc 是一个科学软件工具箱，用于计算机模拟，例如：
-  受约束和无约束相平衡，
-  多组分多相沉淀动力学，
-  晶粒生长、回复和静态再结晶的有效单类微观结构演化，
-  与沉淀动力学完全耦合的多级静态和动态再结晶，
-  基于状态参数的应力-应变曲线建模考虑了多种强化机制，
-  一维和二维长程扩散模拟，
-  同时进行长程扩散和沉淀，
-  相变/移动相边界（开发中），
-  格子大都会和动力学蒙特卡罗
-等。其中热力学基础是CALPHAD方法和CALPHAD型数据库。
+- [VOTCA](https://www.votca.org/): simulating microscopic charge (and exciton) transport in disordered semiconductors
+
+- [MGL](https://matgl.ai/tutorials.html): Materials Graph Library
+
+- [MatCalc](https://www.matcalc.at/): 科学软件工具箱，用于计算机模拟
 
 - [gmxtools-jerkwin](https://jerkwin.github.io/gmxtools/)
 
@@ -173,3 +165,13 @@ MatCalc 是一个科学软件工具箱，用于计算机模拟，例如：
 - [异质基底上化学气相沉积金刚石形核及生长的研究](http://staff.ustc.edu.cn/~qjc/MSThesis/thesis.html)
 
 - [动手学深度学习2.0](https://zh.d2l.ai/index.html)
+
+## @超算
+
+- [AutoDL](https://www.autodl.com/)
+
+- [chinahpc](https://cloud.chinahpc.cn/)
+
+- [bohrium](https://bohrium.dp.tech/)
+
+- [SCNet: 超算互联网](https://www.scnet.cn/)
