--- a/note-2024.md
+++ b/note-2024.md
@@ -1,8 +1,10 @@
 # 一些有用的网页
 
-## MarkDown for WeSubscript
+## Important websites
 
 - [MDnice](https://editor.mdnice.com/)
+
+- [大模型汇总：matbd](https://www.matbd.cn/dmxzq/)
 
 ## 数据对比
 
