--- a/note-2024.md
+++ b/note-2024.md
@@ -6,6 +6,8 @@
 
 - [大模型汇总：matbd](https://www.matbd.cn/dmxzq/)
 
+- [LAMMPS流程化计算自由能](https://calphy.org/en/latest)
+
 ## 数据对比
 
  - [Matbench discovery](https://matbench-discovery.materialsproject.org/)
