--- a/note-2024.md
+++ b/note-2024.md
@@ -170,6 +170,8 @@
 
 - [动手学深度学习2.0](https://zh.d2l.ai/index.html)
 
+- [neural-networks-and-deep-learning](http://neuralnetworksanddeeplearning.com/index.html)
+
 ## @超算
 
 - [AutoDL](https://www.autodl.com/)
