--- a/note-2024.md
+++ b/note-2024.md
@@ -44,6 +44,8 @@
 
 ## @实用工具
 
+- [diagrams流程图](diagrams.net)
+
 - [Mermaid](https://mermaid-live.nodejs.cn/edit)
 
 - [unitconverters](https://www.unitconverters.net/)    [unit-converter](https://www.translatorscafe.com/unit-converter)    [convertunits](https://www.convertunits.com/)
