--- a/note-2024.md
+++ b/note-2024.md
@@ -44,6 +44,8 @@
 
 ## @实用工具
 
+- [latex table online](https://www.tablesgenerator.com/latex_tables)
+
 - [diagrams流程图](diagrams.net)
 
 - [Mermaid](https://mermaid-live.nodejs.cn/edit)
