--- a/note-2024.md
+++ b/note-2024.md
@@ -44,6 +44,8 @@
 
 ## @实用工具
 
+- [Read the English sentences](https://www.entts.com/)
+
 - [2D materials phonon](https://henriquemiranda.github.io/phononwebsite/phonon.html)
 
 - [latex table online](https://www.tablesgenerator.com/latex_tables)
