--- a/note-2024.md
+++ b/note-2024.md
@@ -88,6 +88,8 @@
 
 ## @分子动力学相关
 
+- [模拟建模的一些见解](https://dl-sdg.github.io/RESOURCES/knowledge.html#)：DL-SDG软件中有多种计算模拟方法的介绍。
+
 - [量子力学学习笔记](https://github.com/lhycms/QM/tree/main): 包括了一些分子动力学的内容，以及R.I.N.G.程序的输入示例。
 
 - [rebo-lj-lammps](https://sites.psu.edu/sinnott/software/): 封闭的MoS2势使用与反应性经验键序 (REBO) 中使用的类似形式。
