--- a/note-2024.md
+++ b/note-2024.md
@@ -79,6 +79,7 @@
 - [unit-converter](https://www.translatorscafe.com/unit-converter/en-US/energy/69-10/terahertz-megaelectron-volt/)
 
 - [ris2bib](https://www.bruot.org/ris2bib/)
+- [ris2bib](https://www.bibtex.com/c/bibtex-to-ris-converter/)
 
 - [mathtype](https://demo.wiris.com/mathtype/en/developers.php)
 
